[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jsip"
version = "0.1.0"
description = "Stream joystick events over UDP and replay them as virtual devices"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.scripts]
jsip = "jsip.__main__:main"

[tool.setuptools]
package-dir = { "jsip" = "src" }
packages = ["jsip"]
